[package]
name = "todoku"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Todoku (届く) — HTTP client framework for pleme-io apps"
homepage = "https://github.com/pleme-io/todoku"
repository = "https://github.com/pleme-io/todoku"
documentation = "https://docs.rs/todoku"
readme = "README.md"
license = "MIT"
categories = ["web-programming::http-client"]
keywords = ["http", "client", "api", "retry", "authentication"]

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2.0"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
